heore gallery preview bug on iOS fixed

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -490,9 +490,7 @@ section#home-hero {
     }
 
     ul {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        display: block;
         position: relative;
         width: 100%;
         height: 575px; // колкото е средното (3) изображение
